rename to respondo

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,10 @@ allow_split_before_dict_value = False
 max-line-length = 80
 [aliases]
 test = pytest
+
+[bumpversion]
+current_version = 0.1
+commit = True
+tag = True
+
+[bumpversion:file:setup.py]
